--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js --ext js, json, jsx"
+    "dev": "nodemon app.js, --ext js, json, jsx"
   },
   "repository": {
     "type": "git",
@@ -28,9 +28,12 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@babel/register": "^7.18.9",
     "express": "^4.18.2",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sequelize": "^6.28.0",
     "sequelize-cli": "^6.6.0"
   }
