--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js, --ext js, json, jsx"
+    "dev": "nodemon app.js --ext js,json,jsx"
   },
   "repository": {
     "type": "git",
